File checksums reviewed. New constant root added. Bokeh template modified. Overflow in welcome window fixed

--- a/ocean_data_qc_js/src/css/main.css
+++ b/ocean_data_qc_js/src/css/main.css
@@ -10,6 +10,10 @@ body a {
     color: #337ab5;
 }
 
+.main_body {
+    overflow-y: scroll;
+}
+
 h2 {
     margin-bottom: 40px;
 }
@@ -23,14 +27,12 @@ h5 {
     margin-left: 15px;
 }
 
-.jumbotron {
-    border: 2px solid #337ab7;
-    height: 300px;
+.btn-primary {
+    background-color: #337ab5 !important;
+    border-color: #337ab5 !important;
 }
 
-.jumbotron>img {
-    display: none;  /* to make work the fade in animation */
-}
+/* LOGOS */
 
 #atlantos_img div img {
     height: 164px;
@@ -48,11 +50,6 @@ h5 {
 
 #ctd_img {
     height: 192px;
-}
-
-.btn-primary {
-    background-color: #337ab5 !important;
-    border-color: #337ab5 !important;
 }
 
 /* MAIN FORM */
@@ -215,7 +212,8 @@ html {
 }
 
 html, body, .bokeh_iframe {
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     background: whitesmoke !important;
     margin: 0px;
     padding: 0px;
